--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Repertorio en Guitarra · Musicala</title>
-  <meta name="description" content="Cómo abordar el repertorio en guitarra: formas de leer canciones (notación numérica, cifrado, tablatura, notas y partitura), pasos, rutina y tips prácticos." />
+  <meta name="description" content="Cómo abordar el repertorio en guitarra: formas de leer canciones, práctica por secciones y tips de estudio." />
   <meta name="theme-color" content="#0C41C4" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
@@ -22,11 +22,11 @@
           <small id="pageSubtitle" class="muted">Cómo “sacar” canciones paso a paso</small>
         </div>
       </a>
-      <!-- (Sin botón CTA superior para evitar enlaces inexistentes) -->
     </div>
   </header>
 
   <main class="wrap" id="app">
+
     <!-- HERO -->
     <section class="hero">
       <div class="card hero-copy">
@@ -44,9 +44,25 @@
       </div>
 
       <figure class="hero-media">
-        <!-- Exporta tu imagen como repertorio.png (o .webp) -->
-        <img class="hero-img" src="repertorio.png" alt="Guía de repertorio en guitarra: lectura y práctica por secciones" width="1280" height="720" loading="lazy" />
+        <img class="hero-img" src="repertorio.png" alt="Guía de repertorio en guitarra" width="1280" height="720" loading="lazy" />
       </figure>
+    </section>
+
+    <!-- 🎥 VIDEO GUÍA -->
+    <section class="section" id="section-video">
+      <div class="card video-card">
+        <h3>Video guía — Cómo abordar el repertorio</h3>
+
+        <button class="lite-video" type="button" data-yt="otgRBQnbriM" aria-label="Reproducir video">
+          <img class="lite-thumb"
+            src="https://i.ytimg.com/vi/otgRBQnbriM/hqdefault.jpg"
+            alt="Miniatura del video — Repertorio en Guitarra"
+            loading="lazy" decoding="async" />
+          <span class="lite-play" aria-hidden="true">▶</span>
+        </button>
+
+        <p class="muted" style="margin-top:10px">Tip: tócalo a 0.75× para seguir más cómodo las secciones.</p>
+      </div>
     </section>
 
     <!-- SISTEMAS DE LECTURA -->
@@ -113,7 +129,7 @@
       </div>
     </section>
 
-    <!-- EXPLICACIÓN DETALLADA (acordeón) -->
+    <!-- EXPLICACIÓN DETALLADA -->
     <section class="section" id="section-explain">
       <div class="grid cols-2">
         <div class="card" id="explainLeft" role="group" aria-labelledby="explainTitle">
@@ -121,7 +137,7 @@
 
           <details class="ac" open>
             <summary>1) Escucha activa y estructura</summary>
-            <p>Escucha la canción 2–3 veces y ubica: <b>intro, verso, pre, coro, puente, final</b>.  
+            <p>Escucha la canción 2–3 veces y ubica: <b>intro, verso, pre, coro, puente, final</b>.
             Anota el orden (ej.: Intro–V–V–C–V–C–Puente–C–Final).</p>
           </details>
 
@@ -132,59 +148,59 @@
 
           <details class="ac">
             <summary>3) Tempo y compás</summary>
-            <p>Marca el pulso con el pie. ¿4/4, 3/4, 6/8? Pon un <b>metrónomo</b> aproximado para no acelerar.</p>
+            <p>Marca el pulso con el pie. ¿4/4, 3/4, 6/8? Usa un <b>metrónomo</b> aproximado para mantener el control.</p>
           </details>
 
           <details class="ac">
             <summary>4) Acordes base y progresión</summary>
-            <p>Levanta los <b>acordes</b> de cada sección (V: Em–C–G–D). Tócalos lento con rasgueo sencillo.</p>
+            <p>Levanta los <b>acordes</b> de cada sección. Tócalos lento con rasgueo simple, priorizando claridad sobre velocidad.</p>
           </details>
 
           <details class="ac">
             <summary>5) Ritmo / picking</summary>
-            <p>Define el <b>patrón de mano derecha</b> (rasgueo o arpegio). Practícalo aislado 30–60 s antes de unirlo.</p>
+            <p>Define el <b>patrón de mano derecha</b> (rasgueo o arpegio). Practícalo aislado antes de unirlo.</p>
           </details>
 
           <details class="ac">
             <summary>6) Riffs, licks y detalles</summary>
-            <p>Agrega intros, puentes o adornos. Puedes leerlos en <b>tablatura</b> o <b>notación numérica</b> y luego pasarlos a notas.</p>
+            <p>Agrega intros o adornos. Puedes leerlos en <b>tablatura</b> o <b>notación numérica</b> y luego pasarlos a notas.</p>
           </details>
 
           <details class="ac">
             <summary>7) Unión por secciones</summary>
-            <p>Ensambla <b>dos secciones</b> seguidas sin parar (V → C). Si se desordena, baja tempo y repite.</p>
+            <p>Ensambla <b>dos partes seguidas</b>. Si se pierde el control, baja el tempo y repite hasta lograr fluidez.</p>
           </details>
 
           <details class="ac">
             <summary>8) Toque completo lento</summary>
-            <p>Haz un <b>pase completo</b> al 70–80% del tempo. Grábate 20–30 s y corrige microdetalles.</p>
+            <p>Haz un <b>pase completo</b> al 70–80% del tempo. Grábate y escucha tu progreso.</p>
           </details>
         </div>
 
         <div class="card" id="rightTools">
           <h3>Atajos útiles</h3>
           <div class="list-clean">
-            <p>• <b>Divide por secciones</b> (20–40 s). Repite 3–5 veces cada parte.</p>
-            <p>• <b>Loop inteligente</b>: repite el punto exacto donde fallas, no toda la canción.</p>
-            <p>• <b>Economía de movimiento</b>: dedos cerca del traste y mano derecha uniforme.</p>
-            <p>• <b>Escucha versiones</b> (acústica, en vivo) para ideas de acompañamiento.</p>
+            <p>• <b>Divide por secciones</b>: 20–40 s por parte, repite 3–5 veces.</p>
+            <p>• <b>Loop inteligente</b>: repite justo donde fallas.</p>
+            <p>• <b>Economía de movimiento</b>: dedos relajados y mano estable.</p>
+            <p>• <b>Escucha versiones</b> diferentes para inspirarte.</p>
             <p>• <b>Relaja</b> hombros y muñecas cada 2–3 repeticiones.</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- RUTINA (timeline) -->
+    <!-- RUTINA -->
     <section class="section" id="section-routine">
       <div class="routine-card" role="group" aria-labelledby="routineTitle">
         <div class="routine-head">
           <div class="routine-titles">
-            <h3 id="routineTitle" class="mb-0">Rutina sugerida para repertorio (20–30 min)</h3>
+            <h3 id="routineTitle">Rutina sugerida para repertorio (20–30 min)</h3>
             <small id="routineSubtitle">Calidad antes que cantidad. Si algo duele: pausa.</small>
           </div>
         </div>
 
-        <ol class="timeline" id="routineList" aria-describedby="routineSubtitle">
+        <ol class="timeline">
           <li class="step">
             <span class="badge">1</span>
             <h4>Escucha & análisis (5 min)</h4>
@@ -198,18 +214,18 @@
           <li class="step">
             <span class="badge">3</span>
             <h4>Secciones lentas (6 min)</h4>
-            <p>Trabaja el fragmento más difícil en <b>loop</b> (mano derecha/picking + cambios de acorde).</p>
+            <p>Trabaja el fragmento más difícil en <b>loop</b> hasta lograr fluidez.</p>
           </li>
           <li class="step">
             <span class="badge">4</span>
             <h4>Unión & pase completo (5–8 min)</h4>
-            <p>Une dos secciones y luego haz un pase completo al 70–80% del tempo. Grábate 30 s.</p>
+            <p>Une dos secciones y luego haz un pase completo al 80% del tempo. Grábate 30 s.</p>
           </li>
         </ol>
 
-        <div class="routine-tip" id="routineTip" aria-live="polite">
+        <div class="routine-tip" aria-live="polite">
           <span class="emoji" aria-hidden="true">💡</span>
-          <p><b>Consejo:</b> alterna sistemas: si un riff no sale por tablatura, pruébalo en notación numérica o piensa en notas para ubicarlo en otra posición.</p>
+          <p><b>Consejo:</b> alterna sistemas. Si algo no fluye en tablatura, pruébalo en notación numérica o visualiza las notas.</p>
         </div>
       </div>
     </section>
@@ -217,8 +233,8 @@
     <!-- CIERRE -->
     <section class="section">
       <div class="card" style="text-align:center;">
-        <p style="margin-bottom:10px">
-          <b>Idea clave:</b> toca <b>lento</b>, divide por <b>secciones</b>, <b>no te afanes</b> y escucha mucha música.
+        <p>
+          <b>Idea clave:</b> toca <b>lento</b>, divide por <b>secciones</b>, no te <b>afanes</b> y escucha mucha música.  
           La constancia y la mezcla de lecturas te dan todas las herramientas para sacar canciones con seguridad.
         </p>
       </div>
@@ -226,15 +242,12 @@
 
     <!-- FOOTER -->
     <p class="footnote">
-      © <span id="copyYear"></span> Musicala · 
+      © <span id="copyYear"></span> Musicala ·
       <a id="copyEmail" href="mailto:imusicala@gmail.com">imusicala@gmail.com</a>
     </p>
   </main>
 
-  <!-- Toast -->
   <div class="toast" id="toast" role="status" aria-live="polite"></div>
-
-  <!-- JS base -->
   <script src="script.js"></script>
 </body>
 </html>
